Se agregaron las rutas de pedidos en pedidos.routes.js además de actualizar las rutas en el index.js y actualizar el archivo swagger-output.json
